# bifrost-eval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mimir/: how-it-works.md  key-concepts.md  skill-builder.md  what-is-this.md  what-you-can-say.md
src/bifrost_eval/: __init__.py  cli.py
src/bifrost_eval/adapters/: __init__.py  amf_adapter.py  comparison.py
src/bifrost_eval/core/: __init__.py  metrics.py  runner.py  scorer.py
src/bifrost_eval/models/: __init__.py  evaluation.py
tests/: conftest.py
tests/integration/: test_amf_boundary.py  test_full_pipeline.py
tests/unit/: test_cli.py  test_comparison.py  test_metrics.py  test_models.py  test_runner.py  test_scorer.py
